<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context="com.prateek.gem.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adminName"
        android:layout_alignParentTop="true"
        android:singleLine="false"
        android:text="@string/reg_hint"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/adminName"
        style="@style/editTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="@dimen/margin_button_top_or_bottom"
        android:ems="10"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/email"
        style="@style/editTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/adminName"
        android:layout_marginTop="@dimen/margin_button_top_or_bottom"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/code"
        style="@style/editTextField"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/email"
        android:layout_marginTop="@dimen/margin_button_top_or_bottom"
        android:ems="10"
        android:gravity="right"
        android:inputType="text"                
        android:text="@string/code" />

    <EditText
        android:id="@+id/adminNumber"
        style="@style/editTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/code"
        android:layout_alignBottom="@+id/code"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/code"
        android:layout_marginLeft="5dp"
        android:ems="10"
        android:hint="@string/prompt_number"
        android:inputType="number"
        android:maxLength="10" />

    <EditText
        android:id="@+id/confirmPassword"
        style="@style/editTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="@dimen/margin_button_top_or_bottom"
        android:ems="10"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/addregistrationButton"
        style="@style/loginButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/confirmPassword"
        android:layout_marginTop="@dimen/margin_button_top_or_bottom"
        android:text="@string/button_register" />

    <EditText
        android:id="@+id/password"
        style="@style/editTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/code"
        android:layout_marginTop="@dimen/margin_button_top_or_bottom"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

</RelativeLayout>