<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context="com.prateek.gem.MainActivity$PlaceholderFragment" >

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/sectionrule1" />

    <Button
        android:id="@+id/registerButton"
        style="@style/loginButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view1"
        android:layout_alignRight="@+id/view1"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="@dimen/margin_fields_top_or_bottom"
        android:text="@string/button_register" />

    <Button
        android:id="@+id/loginButton"
        style="@style/loginButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerButton"
        android:layout_alignRight="@+id/view1"
        android:layout_below="@+id/view1"        
        android:layout_marginTop="@dimen/margin_fields_top_or_bottom"
        android:text="@string/button_login" />
   
    <EditText
        android:id="@+id/phoneNumber"
        style="@style/editTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_marginBottom="@dimen/margin_fields_top_or_bottom"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/code"
        android:ems="10"
        android:hint="@string/prompt_number"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/code"
        style="@style/editTextField"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignTop="@+id/phoneNumber"
        android:ems="10"
        android:gravity="right"
        android:inputType="phone"
        android:text="@string/code" />    

    <EditText
        android:id="@+id/password"
        style="@style/editTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/margin_fields_top_or_bottom"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

</RelativeLayout>