<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/global_right_frame_item_selector"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="@dimen/expenseList_padding" >

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.60"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/memberName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memberName"
            android:textAlignment="viewStart"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/memberPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memberPhoneNumber"
            android:textAlignment="viewStart"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <ImageView
        android:id="@+id/button_remove_member"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"
        android:contentDescription="@string/imageRemove"
        android:src="@drawable/ic_action_content_discard" />

    <ImageView
        android:id="@+id/button_edit_member"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"        
        android:contentDescription="@string/imageEdit"
        android:visibility="gone"
        android:src="@drawable/ic_action_content_edit" />

</LinearLayout>