<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rightContentBg"
    android:orientation="vertical"
    android:padding="@dimen/expenseList_padding" >

    <FrameLayout style="@style/mystatsframestyle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                style="@style/mystatsframestyle_label"
                android:text="@string/label_grouptotalspent" />

            <TextView
                android:id="@+id/totalSpentView"
                style="@style/mystatsframestyle_value"
                android:text="@string/nothingtocalculate" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout style="@style/mystatsframestyle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                style="@style/mystatsframestyle_label"
                android:text="@string/label_mytotalspent" />

            <TextView
                android:id="@+id/totalSpentViewByMember"
                style="@style/mystatsframestyle_value"
                android:text="@string/nothingtocalculate" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout style="@style/mystatsframestyle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                style="@style/mystatsframestyle_label"
                android:text="@string/howmuchgetfromothers" />

            <TextView
                android:id="@+id/howmuchgetfromothers"
                style="@style/mystatsframestyle_value"
                android:text="@string/nothingtocalculate" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout style="@style/mystatsframestyle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                style="@style/mystatsframestyle_label"
                android:text="@string/howmuchyougivetoothers" />

            <TextView
                android:id="@+id/howmuchgivetoothers"
                style="@style/mystatsframestyle_value"
                android:text="@string/nothingtocalculate" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>