<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/global_right_frame_item_selector"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/categoryName"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_weight="0.30"
        android:ellipsize="end"
        android:padding="10dp"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="@string/item"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_weight="0.30"
        android:ellipsize="end"
        android:padding="10dp"
        android:text="@string/itemName"
        android:layout_gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/button_edit_item"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"
        android:contentDescription="@string/imageEdit"
        android:paddingBottom="@dimen/item_padding_top_bottom"
        android:paddingTop="@dimen/item_padding_top_bottom"
        android:src="@drawable/ic_action_content_edit"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/button_remove_item"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"
        android:contentDescription="@string/imageRemove"
        android:paddingBottom="@dimen/item_padding_top_bottom"
        android:paddingTop="@dimen/item_padding_top_bottom"
        android:src="@drawable/ic_action_content_discard" />

</LinearLayout>